--- a/minmax/1-serial/Makefile
+++ b/minmax/1-serial/Makefile
@@ -2,17 +2,13 @@ CPPFLAGS=
 CFLAGS=-g -Wall -Wextra -std=c99 -O3 -march=native -fopenmp
 LDFLAGS=-g -lgomp
 
-all: main_one_read main_two_reads
+all: main main_one_read
 
-main_one_read: main_one_read.o minmax.o helpers.o
+main: main.o minmax.o helpers.o
 
-main_two_reads: main_two_reads.o minmax.o helpers.o
+asm_main: main.c
+	$(CC) $(CFLAGS) -S -c $<  
 
 clean:
 	$(RM) *.o
-	$(RM) main
-
-mrproper:
-	rm main_one_read main_two_reads
-
-.PHONY: all clean mrproper
+	$(RM) main main_one_read
