First exercise done

--- a/minmax/4-tbb/Makefile
+++ b/minmax/4-tbb/Makefile
@@ -4,6 +4,10 @@ LDFLAGS=-g -lgomp -ltbb
 all: main
 
 main: main.o minmax.o helpers.o
+	g++ $^ $(CPPFLAGS) $(LDFLAGS) -o $@
+
+minmax.o: minmax.cpp
+	g++ -c $< $(CPPFLAGS) $(LDFLAGS) -o $@
 
 clean:
 	$(RM) *.o
